@@ -1,11 +1,10 @@
-# SimCitree
+# Projet Concert
 
-![SimCitree Logo](/documents/logo_simcitree.png)
+<img src="./public/img/symfony.png" alt="drawing" width="200px"/>
 
+Projet Concert est un site web sur une salle de concert créé avec le Framework Symfony.
 
-SimCitree est un simulateur de forêt très basique.
-
-Date : Octobre 2020 à début Janvier 2021.
+Date : décembre 2022 à début février 2022.
 
 ## Projects Status
 
@@ -13,32 +12,7 @@ Le projet est terminé.
 
 ## Contexte
 
-Lors du 3ème semestre à l'IUT Informatique (de Montpellier), en groupe de 4, nous avons dû réaliser un simulateur de forêt assez simpliste.
-
-Notre tuteur de projet avait déjà créé un simulateur semblabe en Python, mais il voulait que nous le recréions en l'optimisant. Ainsi est né SimCitree ! (jeu de mot avec Simcity et Tree).
-
-## Documents et autres
-
-La documentation et les diapos ont été rédigées/crées lors au même moment que le développement du programme, il est donc normal qu'elles ne soient absolument pas parfaites.
-
-- [Les diapositives des présentations](/documents/diapos)
-- [Le rapport (la documentations)](/documents/rapport_de_projet_simcitree.pdf)
-- [Le .jar](/documents/SimCitree.jar)
-
-## Installation
-
-- [Java](https://www.java.com/fr/) 
-- Java 11 (Pour le développement)
-- JavaFX 11 (Pour le développement)
-
-
-## Installation avec IntellJ
-
-*Nous avions utilisé que cet IDE pour le développement*
-
-- Dans **File>Project Structure>Librairies**, ajouter le chemin du répertoire "lib" de javaFX 11 
-- Dans **File>Settings>Appearance & Behavior>Path Variables**, créer la variable PATH_TO_FX et y mettre le chemin du répertoire "lib" de javaFX.
-- Dans la configuration du **RUN**, dans la section **VM options**, mettre **--module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.media**
+Projet réalisé lors de mes études en Licence Pro : Assistant de Projet Informatique, Développement d'Application E-business afin d'apprendre l'utilisation de Symfony.
 
 ## Licence
 
